# shotjetcut

./: .gitignore  pyproject.toml
shotjetcut/: func.py  main.py  shotcut.py  timeline.py
